fix: notication ui fix on mobile.

--- a/components/Notification/style.scss
+++ b/components/Notification/style.scss
@@ -4,7 +4,7 @@
   display: none;
   position: fixed;
   z-index: $notification;
-  bottom: 0;
+  bottom: 50px;
   right: 0;
   width: 100%;
 
